plugins/rocks.xml.webhelp/resources/css/mobile-style.css
@media only screen and (min-width: 1170px) {
    #mobile-separator-button{
        display: none;
    }

    .close-mobile-breadcrumbs{
        display: none;
    }

    .mobile-menu-button-container {
        display: none;
    }
}

@media only screen and (max-width: 1169px) {
    .head-breadcrumbs-child-elements{
        display: none;
    }

    .close-mobile-breadcrumbs{
        display: none;
    }

    .prev-topic{
        display: none;
    }

    .next-topic{
        display: none;
    }

    .button-hide-show-toc-container {
        display: none;
    }

    .logo-header:hover > .tooltip-logo,
    .button-flip-card:hover > .tooltip-flip-card,
    .main-button-container-wrapper:not(.is-sticky) #button-hide-show-toc:not(.hidden):hover > .tooltip-hide-toc,
    .main-button-container-wrapper:not(.is-sticky) #button-hide-show-toc.hidden:hover > .tooltip-show-toc,
    .main-button-container-wrapper:not(.is-sticky) #button-expand-collapse:not(.inactive):not(.expanded):hover > .tooltip-expand-all,
    .main-button-container-wrapper:not(.is-sticky) #button-expand-collapse:not(.inactive).expanded:hover > .tooltip-collapse-all,
    .main-button-container-wrapper:not(.is-sticky) #button-show-active:not(.inactive):hover > .tooltip-show-active,
    .main-button-container-wrapper:not(.is-sticky) .button-dropdown-download:hover > .tooltip-download,
    .main-button-container-wrapper:not(.is-sticky) .button-print:hover > .tooltip-print,
    .main-button-container-wrapper:not(.is-sticky) .button-dropdown-download:hover > .tooltip-download-current-page,
    .main-button-container-wrapper:not(.is-sticky) .button-dropdown-share-google-drive:hover > .tooltip-google-drive {
        display: none;
    }

    .button-dropdown-download:hover, .button-dropdown-download:focus {
        background-image: url(../images/download.svg);
        background-color: #FFFFFF;
    }

    .button-print:hover, .button-print:focus {
        background-image: url(../images/print.svg);
        background-color: #FFFFFF;
    }

    .button-dropdown-share-google-drive:hover, .button-dropdown-share-google-drive:focus {
        background-image: url(../images/save-to-drive.svg);
        background-color: #FFFFFF;
    }

    .expand-collapse-search-container.expanded .expand-collapse-search:hover{
        background-image: url(../images/search-close.svg);
        background-color: #FFFFFF;
    }

    #button-expand-collapse:not(.inactive).expanded:hover {
        background-image: url(../images/toc-collapse-all.svg);
        background-color: #FFFFFF;
    }

    #button-expand-collapse:not(.inactive):not(.expanded):hover {
        background-image: url(../images/toc-expand-all.svg);
        background-color: #FFFFFF;
    }

    #button-show-active:hover {
        background-image: url(../images/toc-show-active.svg);
        background-color: #FFFFFF;
    }

    .expand-collapse-search:hover {
        background-image: url(../images/search-grey.svg);
        background-color: #FFFFFF;
    }

    .toc-container {
        height: 100%;
        max-width: 100%;
    }

    #toc-wrapper {
        width: 100%;
        transform: translateY(0%);
        padding: 0;
        transition: none;
    }

    #toc-wrapper.hidden {
        height: 0;
        transform: translateY(-100%);
}

    #article-wrapper {
        width: 100%;
    }

    #article-wrapper.hidden {
        display: none;
    }

    .main-button-container-wrapper {
        padding: 1px 0;
    }

    .header-search-wrapper {
        padding-right: 1rem;
    }
}

.close-mobile-breadcrumbs.show{
    pointer-events: auto;
    background-color: #fff;
    display:block;
    margin:0 auto;
    border-radius: 50%;
    padding: 8px 13px 12px 12px;
    width: 40px;
    height: 40px;
}

.head-breadcrumbs-child-elements.show{
    padding: 20px 0;
    display:block;
    z-index: 70;
    position: absolute;
    width: 95%;
}

.head-breadcrumbs-child-elements.show a{
    display:block;
    text-align: center;
    padding: 0.5em;
}

.child-elements.show{
    background-color: #fff;
    margin-top: 1em;
    display: block;
    padding: 1em 1.3em;
}

.head-breadcrumbs-child-elements.show pre{
    display:block;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    content: url(../images/toc-bottom-arrow.svg);
    color: #404040;
}

.child-elements.show .head-breadcrumbs-child-last-elements{
    display:block;
    text-align: center;
    padding: 0.5em;
}

.shading-container-wrapper.grey{
    background-color: #0007;
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 60;
    top: 0;
}

.shading-container-wrapper.toc {
    background-color: #f2f2f2;
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 20;
    top: 0;
}

#mobile-menu-button {
    background-image: url(../images/menu.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-color: #FFFFFF;
    padding: 20px;
    font-size: 16px;
    border: none;
    left: 45em;
    cursor: pointer;
    top: 1.7em;
    border-radius: 50%;
}

#mobile-menu-button.active {
    background-image: url(../images/search-close.svg);
}


@media only screen and (min-width: 320px) and (max-width: 720px) {
    #toc-wrapper {
        width: 100%;
    }

    .toc-container {
        max-width: 100%;
    }

    .header-title {
        text-align: center;
        margin-top: 1rem;
        margin-bottom: 1rem;
    }

    .header-search-wrapper{
        margin-left: auto;
        margin-right: auto;
    }

    .search {
        border: none;
        border-radius: 30px;
        width: 100%;
        grid-column-start: 1;
        grid-column-end: -1;
        grid-row-start: 1;
    }

}

